// ============================================
// COURSE REGISTRATION SYSTEM - ACTUAL SCHEMA
// Updated to reflect current Prisma schema
// ============================================

// 1. FACULTY NUMBERS TABLE
Table faculty_numbers {
  faculty_no varchar(20) [pk]
  admission_year int [not null]
  branch_code varchar(10) [not null]
  branch_name varchar(50) [not null]
  roll_number varchar(10) [not null]
  program_type varchar(20) [default: 'B.Tech']
  
  indexes {
    (branch_code, admission_year)
  }
}

// 2. STUDENTS TABLE
Table students {
  enrollment_no varchar(20) [pk]
  faculty_no varchar(20) [unique, not null]
  name varchar(100) [not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  current_semester int [not null, default: 1]
  current_cpi decimal(4,2) [default: 0.00]
  hall varchar(50) [note: 'Hostel/Hall name']
  is_active boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    faculty_no
    email
  }
}

// 3. COURSES TABLE
Table courses {
  course_code varchar(20) [pk]
  course_name varchar(100) [not null]
  credits int [not null]
  semester_no int [not null]
  branch_code varchar(10) [not null]
  is_elective boolean [default: false]
  elective_group varchar(10)
  course_type varchar(20) [default: 'Theory']
  created_at timestamp [default: `now()`]
  
  indexes {
    (branch_code, semester_no)
  }
}

// 4. COURSE PREREQUISITES
Table course_prerequisites {
  prerequisite_id int [pk, increment]
  course_code varchar(20) [not null]
  prerequisite_course_code varchar(20) [not null]
  min_grade varchar(2) [default: 'P']
}

// 5. ELECTIVE GROUPS
Table elective_groups {
  group_id int [pk, increment]
  group_code varchar(10) [not null]
  group_name varchar(100)
  branch_code varchar(10) [not null]
  semester_no int [not null]
  min_selection int [default: 1]
  max_selection int [default: 1]
}

// 6. TEACHERS TABLE
Table teachers {
  teacher_id int [pk, increment]
  name varchar(100) [not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  role varchar(20) [default: 'teacher']
  department varchar(50)
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}

// 7. GRADE RECORDS
Table grade_records {
  grade_id int [pk, increment]
  enrollment_no varchar(20) [not null]
  faculty_no varchar(20) [not null]
  course_code varchar(20) [not null]
  academic_year int [not null]
  semester_type int [not null, note: '1=Odd, 2=Even']
  grade varchar(2)
  grade_points decimal(3,2)
  is_backlog boolean [default: false]
  is_improvement boolean [default: false]
  uploaded_at timestamp [default: `now()`]
  
  indexes {
    (enrollment_no, academic_year, semester_type)
    course_code
  }
}

// 8. SEMESTER RESULTS
Table semester_results {
  result_id int [pk, increment]
  enrollment_no varchar(20) [not null]
  faculty_no varchar(20) [not null]
  academic_year int [not null]
  semester_no int [not null]
  semester_type int [not null, note: '1=Odd, 2=Even']
  branch_code varchar(10) [not null]
  name varchar(100) [not null]
  spi decimal(4,2)
  cpi decimal(4,2)
  total_credits_earned int [default: 0]
  result_status varchar(30)
  result_declaration_date date
  is_result_declared boolean [default: false]
  remarks text
  
  indexes {
    enrollment_no
  }
}

// 9. COURSE REGISTRATIONS
Table course_registrations {
  registration_id int [pk, increment]
  enrollment_no varchar(20) [not null]
  course_code varchar(20) [not null]
  academic_year int [not null]
  semester_type int [not null, note: '1=Odd, 2=Even']
  registration_type varchar(20) [default: 'regular', note: 'regular, backlog, improvement']
  is_approved boolean [default: false]
  registered_at timestamp [default: `now()`]
  deleted_at timestamp [note: 'Soft delete - NULL means active']
  
  indexes {
    (enrollment_no, academic_year, semester_type)
    (enrollment_no, course_code, academic_year, semester_type, deleted_at)
  }
}

// 10. COURSE SCHEDULE
Table course_schedule {
  schedule_id int [pk, increment]
  course_code varchar(20) [not null]
  academic_year int [not null]
  semester_type int [not null]
  day_of_week varchar(10)
  start_time time
  end_time time
}

// 11. REGISTRATION PERIODS (Legacy - kept for compatibility)
Table registration_periods {
  period_id int [pk, increment]
  academic_year int [not null]
  semester_type int [not null]
  branch_code varchar(10)
  start_date datetime [not null]
  end_date datetime [not null]
  is_active boolean [default: true]
  period_type varchar(20) [default: 'regular']
  created_at timestamp [default: `now()`]
}

// 12. REGISTRATION PHASES (New - Phase-based control)
Table registration_phases {
  phase_id int [pk, increment]
  phase_name varchar(50) [not null, note: 'REGULAR, LATE, ADD_DROP, WITHDRAWAL, FREEZE']
  phase_label varchar(100) [not null, note: 'Display name for UI']
  academic_year int [not null]
  semester_type int [not null]
  start_date datetime
  end_date datetime
  is_active boolean [default: false, note: 'Currently active phase']
  is_enabled boolean [default: true, note: 'Can be toggled on/off']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    (phase_name, academic_year, semester_type) [unique]
    (academic_year, semester_type, is_enabled, start_date, end_date)
  }
}

// 13. REGISTRATION RULES
Table registration_rules {
  rule_id int [pk, increment]
  rule_name varchar(100) [not null, note: 'MAX_CREDITS, MODIFICATION_DEADLINE, etc.']
  rule_type varchar(50) [not null]
  rule_value varchar(100)
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// 14. AUDIT LOGS
Table audit_logs {
  log_id int [pk, increment]
  action_type varchar(50) [not null]
  performed_by int
  action_details text
  affected_records int [default: 0]
  timestamp timestamp [default: `now()`]
}

// ============================================
// RELATIONSHIPS
// ============================================

Ref: students.faculty_no - faculty_numbers.faculty_no

Ref: grade_records.enrollment_no > students.enrollment_no
Ref: grade_records.course_code > courses.course_code

Ref: semester_results.enrollment_no > students.enrollment_no

Ref: course_registrations.enrollment_no > students.enrollment_no
Ref: course_registrations.course_code > courses.course_code

Ref: course_prerequisites.course_code > courses.course_code
Ref: course_prerequisites.prerequisite_course_code > courses.course_code

Ref: course_schedule.course_code > courses.course_code

Ref: audit_logs.performed_by > teachers.teacher_id

// ============================================
// NOTES
// ============================================

Note students {
  '''
  - is_active defaults to false (must be activated by admin)
  - hall field stores hostel/residence hall name
  - current_cpi is calculated from best grade attempts
  '''
}

Note course_registrations {
  '''
  - deleted_at enables soft deletes (NULL = active)
  - registration_type: regular, backlog, improvement
  - Backlog: Failed courses being retaken
  - Improvement: Passed courses being retaken for better grade
  '''
}

Note registration_phases {
  '''
  Phase-based registration control system:
  - REGULAR: Normal registration period
  - LATE: Late registration with possible fees
  - ADD_DROP: Add/drop courses period
  - WITHDRAWAL: Course withdrawal period
  - FREEZE: Registration frozen, no changes allowed
  
  Only one phase can be active (is_active=true) at a time
  '''
}

Note grade_records {
  '''
  - Multiple attempts allowed (backlog/improvement)
  - Best grade is used for CPI calculation
  - semester_type: 1=Odd, 2=Even
  '''
}
